# dc27_badge

./: .gitignore  cost-estimates-2019.numbers
Business/: Budget.numbers  cost-estimates-2019  with joystaick.numbers  cost-estimates-2019.numbers  production schedule.key
artwork/: dragon-150mmx90mm.dxf  dragon.ai  dragon.dxf  dragon2.dxf  dragon3.dxf  evilbomb-face.ai  evilbomb-face.dxf  evilbomb.ai  evilbomb_outline.ai  evilbomb_outline.dxf  greekcircle.ai  howto.psd  map-02.tif  map-03.tif  map-05.tif  map-06.tif  map-08.tif  map-10.tif  map-11.tif  map-12.tif  map-13.tif  map-14.tif  new-context-splash.ai  nophotos.psd  seabattle-4x4-map.tif  slimsplash.psd  unlock screen.psd  wiley-16col.psd
artwork/idea board/: NOTES
hardware/: pins_nRF52840DK.txt
hardware/DC27-SAO/: DC27-SAO  DC27-SAO-cache.lib  DC27-SAO.dsn  DC27-SAO.kicad_pcb  DC27-SAO.kicad_pcb-bak  DC27-SAO.sch  DC27-SAO.xml  NOTES  OLED.LIB  dc27-sao-extras.lib  sym-lib-table
hardware/DC27-SAO/dc27-sao-fp.pretty/: PinSocket_2x02_P2.54mm_Vertical_SMD.kicad_mod
hardware/DC27-SAO/lib_fp.pretty/: Badgelife-SAO-BACK.kicad_mod  Badgelife-SAO.kicad_mod
hardware/DC27-peripheral/: CS4344-CZZ.dcm  CS4344-CZZ.mod  DC27-DC Power.bak  DC27-DC Power.sch  DC27-badge-cache.lib  DC27-badge-grouped-bom.csv  DC27-badge.kicad_pcb  DC27-badge.kicad_pcb-bak  DC27-badge.pro  DC27-badge.sch  DC27-badge.xml  DC27-peripheral-cache.lib  DC27-peripheral.sch  DC27Audio.sch  DC27LED_INTERFACE.sch  DC27LEDs.bak  DC27LEDs.sch  file5C2B533B.sch  sym-lib-table
hardware/DC27-peripheral/BMD-340-A-R/: BMD-340-A-R.mod
hardware/DC27-peripheral/LM4880/: LM4880.lib
hardware/DC27-peripheral/SAMTEC-SSM-120-X-DV/: SAMTEC-SSM-120-X-DV.lib  SAMTEC-SSM-120-X-DV.mod
hardware/DC27-peripheral/lib_fp.pretty/: QFN-40-1EP_5x5mm_P0.4mm_EP3.5x3.5mm.kicad_mod
hardware/DC27-peripheral/lp_fp.pretty/: APTF1616LSEEZGKQBKC.mod  CS4344-CZZ.lib  is31fl736.dcm  mic2288.dcm
hardware/dc27_badge_kicad/: DC27-DC Power.sch  DC27-badge-cache.lib  DC27-badge-rescue.lib  DC27-badge.cad  DC27-badge.dsn  DC27-badge.kicad_pcb  DC27-badge.kicad_pcb-bak  DC27-badge.net  DC27-badge.pro  DC27-badge.rules  DC27-badge.sch  DC27-badge.ses  DC27-badge.xml  DC27-peripheral-cache.lib  DC27Audio.sch  DC27LED_INTERFACE.sch  DC27LEDs.sch  DC27_Switches.sch  JS5208.lib  JS5208.mod  QFN-40-1EP_5x5mm_P0.4mm_EP3.5x3.5mm.kicad_mod  SON50P300X300X80-11N.mod  file5C2B533B.sch  fp-info-cache  fp-lib-table  mechanicals.sch  sym-lib-table
hardware/dc27_badge_kicad/3d_models/: SSM-120-L-DV-M-TR.wrl
hardware/dc27_badge_kicad/BMD-340-A-R/: BMD-340-A-R.lib
hardware/dc27_badge_kicad/BOM/: API-NOTES  bom-dc27-limited.tsv  bom-merged.xlsx  bom-simplified.xlsx  bom.numbers  bom.tsv  bom.xlsx  mf_bom_scrape_proto2.txt  mf_bom_scrape_to_tsv.py
hardware/dc27_badge_kicad/LXES15AAA1-153/: LXES15AAA1-153.lib  LXES15AAA1-153.mod
hardware/dc27_badge_kicad/gerbers/: DC27-badge-B.Cu.gbl  DC27-badge-B.Mask.gbs  DC27-badge-B.Paste.gbp  DC27-badge-B.SilkS.gbo  DC27-badge-Edge.Cuts.bor  DC27-badge-F.Cu.gtl  DC27-badge-F.Mask.gts  DC27-badge-F.Paste.gtp  DC27-badge-F.SilkS.gto  DC27-badge-GND.g2  DC27-badge-GND.g2l  DC27-badge-PWR.g3l  DC27-badge-bottom.pos  DC27-badge-drl.rpt  DC27-badge-drl_map.gbr  DC27-badge-top.pos  DC27-badge.drl  DC27-badge.xln  bom.csv  renamer.sh
hardware/dc27_badge_kicad/lib_fp.pretty/: APTF1616LSEEZGKQBKC.lib  AST-01708-MRR.kicad_mod  AST-01708MR-R.igs  BMD-340-A-R.kicad_mod  CS4344-CZZ.lib  ER-TFTM028-4.STEP  LED_Cree-PLCC4_3.2x2.8mm_CCW.kicad_mod  LM4880.mod  S2B-PH-SM4-TB.step  SKRHAA.STEP  SKRHAAE010.kicad_mod  SSM-120-S-DV-A.stp  bombface-moved.kicad_mod  bombface.kicad_mod  is31fl736.lib  max17043.lib  mic2288.lib
hardware/dc27_badge_kicad/lib_sch/: DC27-badge.bck  DC27-badge.dcm  DC27-badge.lib
hardware/dc27_badge_kicad/samtec.pretty/: SAMTEC-SSM-120-X-DV.kicad_mod
hardware/dc27_badge_kicad/tdfn-10-ep-2.00x2.pretty/: SON50P300X300X80-11N.kicad_mod  tdfn-10-ep-2.00x2.50.kicad_mod
hardware/dc27_badge_kicad/tools/: bom_merge.py  csv2tsv.sh  renamer.sh
hardware/programming/: debug.txt  dual_olimex.sh  dual_program.sh  final.sh  openocd-nrf52-jlink.sh  openocd-nrf52-olimex-chibios.sh  openocd-nrf52-olimex.sh  openocd-nrf52-stlink.sh  openocd-nrf52dk-chibios.sh  openocd-nrf52dk.sh  provision-nrf52-jlink.sh  provision-nrf52-olimex.sh  provision-nrf52-stlink.sh  provision-nrf52dk.sh
software/firmware/: todo.txt
software/firmware/ChibiOS/: readme.txt  release_note_17.6.0.txt  release_note_18.2.0.txt
software/firmware/FatFs/: build.mk
software/firmware/SoftDevice_S132/: mkelf.sh
software/firmware/SoftDevice_S140/: mkelf.sh  s140_nrf52_7.0.0_softdevice.hex
software/firmware/v2600/: CREDITS  Canvas.c  Makefile.in  README  README.install  README.linux  V2600  acconfig.h  amiga_disp.c  amiga_joy.c  amiga_keyb.c  amiga_mouse.c  bin2c26.c  build.mk  c26def.h  collision.c  config.h  config.h.in  configure  configure.in  cpu.c  cpu.h  dbg_mess.c  display.h  dos_disp.c  dos_joy.c  dos_keyb.c  dos_mouse.c  dos_sound.c  dumpsnd.c  exmacro.c  exmacro.h  files.c  keyboard.c  limiter.c  linux_joy.c  linux_sound.c  main.c  memory.c  memory.h  (+32 more)
software/firmware/v2600/config/: config.dos  v2600.lsm.in  v2600.spec.in
software/sd_card/: .gitignore  Makefile  cardgen.py  sdcard-readme.txt
software/tools/: Makefile
(+1899 files in other folders)
